-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7
-
None
-
93bf7fe7b (dev), 1992645eb (6.7)
Steps: Open Graphs2D testbed application and Line Properties view. Adjust line widths with sliders. Widths not updating in graph until resizing the window or something else that causes graph to render.
For Gerrit Dashboard: QTBUG-121208 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
533007,2 | Update line and scatters graphs when changed | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
533025,2 | Update line and scatters graphs when changed | 6.7 | qt/qtgraphs | Status: MERGED | +2 | 0 |