Update line and scatters graphs when changed

Fixes: QTBUG-121208
Change-Id: I25cdf42e77c65e75d25bd919115d05247027800e
Reviewed-by: Kaj Grönholm <kaj.gronholm@qt.io>
(cherry picked from commit 93bf7fe7ba3208d970ff3f2ef2c31a8abf867594)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>